[gd_scene load_steps=25 format=2]

[ext_resource path="res://canvas/canvas.tscn" type="PackedScene" id=1]
[ext_resource path="res://tool-files/TransitionEnd.png" type="Texture" id=2]
[ext_resource path="res://tool-files/Add.png" type="Texture" id=3]
[ext_resource path="res://tool-files/Remove.png" type="Texture" id=4]
[ext_resource path="res://tool-files/MoveLeft.png" type="Texture" id=5]
[ext_resource path="res://tool-files/Duplicate.png" type="Texture" id=6]
[ext_resource path="res://tool-files/Play.png" type="Texture" id=7]
[ext_resource path="res://tool-files/Onion.svg" type="Texture" id=8]
[ext_resource path="res://tool-files/undo.png" type="Texture" id=9]
[ext_resource path="res://tool-files/redo.png" type="Texture" id=10]
[ext_resource path="res://tool-files/tool.gd" type="Script" id=11]
[ext_resource path="res://main-files/scratch_animator.png" type="Texture" id=12]

[sub_resource type="InputEventKey" id=5]
scancode = 65

[sub_resource type="ShortCut" id=19]
shortcut = SubResource( 5 )

[sub_resource type="InputEventKey" id=11]
scancode = 68

[sub_resource type="ShortCut" id=20]
shortcut = SubResource( 11 )

[sub_resource type="InputEventKey" id=7]
scancode = 82

[sub_resource type="ShortCut" id=21]
shortcut = SubResource( 7 )

[sub_resource type="InputEventKey" id=13]
scancode = 16777235

[sub_resource type="ShortCut" id=18]
shortcut = SubResource( 13 )

[sub_resource type="InputEventKey" id=16]
scancode = 16777236

[sub_resource type="ShortCut" id=17]
shortcut = SubResource( 16 )

[sub_resource type="InputEventKey" id=9]
scancode = 80

[sub_resource type="ShortCut" id=22]
shortcut = SubResource( 9 )

[node name="tool" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 505.0
margin_bottom = 385.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="ScrollContainer"]
margin_right = 498.0
margin_bottom = 378.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/CenterContainer"]
margin_left = 105.0
margin_top = 20.0
margin_right = 393.0
margin_bottom = 358.0

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer"]
margin_right = 288.0
margin_bottom = 256.0

[node name="TabContainer" type="TabContainer" parent="ScrollContainer/CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 256.0
margin_bottom = 256.0
rect_min_size = Vector2( 256, 256 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="0" parent="ScrollContainer/CenterContainer/VBoxContainer/HBoxContainer/TabContainer" instance=ExtResource( 1 )]
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="1" parent="ScrollContainer/CenterContainer/VBoxContainer/HBoxContainer/TabContainer" instance=ExtResource( 1 )]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="2" parent="ScrollContainer/CenterContainer/VBoxContainer/HBoxContainer/TabContainer" instance=ExtResource( 1 )]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ViewportContainer" type="ViewportContainer" parent="ScrollContainer/CenterContainer/VBoxContainer/HBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
stretch = true

[node name="Viewport" type="Viewport" parent="ScrollContainer/CenterContainer/VBoxContainer/HBoxContainer/TabContainer/ViewportContainer"]
size = Vector2( 248, 220 )
handle_input_locally = false
usage = 0
render_target_update_mode = 0

[node name="Canvas" parent="ScrollContainer/CenterContainer/VBoxContainer/HBoxContainer/TabContainer/ViewportContainer/Viewport" instance=ExtResource( 1 )]
margin_left = -960.0
margin_top = -508.0
margin_right = -960.0
margin_bottom = -508.0

[node name="Sprite" type="Sprite" parent="ScrollContainer/CenterContainer/VBoxContainer/HBoxContainer/TabContainer/ViewportContainer/Viewport/Canvas"]
position = Vector2( 960, 508 )
texture = ExtResource( 12 )

[node name="Camera2D" type="Camera2D" parent="ScrollContainer/CenterContainer/VBoxContainer/HBoxContainer/TabContainer/ViewportContainer/Viewport/Canvas"]
position = Vector2( 960, 508 )
current = true

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 260.0
margin_right = 288.0
margin_bottom = 256.0

[node name="Add" type="Button" parent="ScrollContainer/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 28.0
margin_bottom = 22.0
hint_tooltip = "add"
shortcut = SubResource( 19 )
icon = ExtResource( 3 )

[node name="Duplicate" type="Button" parent="ScrollContainer/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 28.0
margin_bottom = 48.0
shortcut = SubResource( 20 )
icon = ExtResource( 6 )

[node name="Remove" type="Button" parent="ScrollContainer/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 28.0
margin_bottom = 74.0
hint_tooltip = "remove current frame"
shortcut = SubResource( 21 )
icon = ExtResource( 4 )

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 28.0
margin_bottom = 82.0

[node name="OnionSkinning" type="Button" parent="ScrollContainer/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 86.0
margin_right = 28.0
margin_bottom = 108.0
toggle_mode = true
pressed = true
icon = ExtResource( 8 )

[node name="VSlider" type="VSlider" parent="ScrollContainer/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 16.0
margin_bottom = 256.0
size_flags_vertical = 3
max_value = 0.0
ticks_on_borders = true

[node name="HFlowContainer" type="HFlowContainer" parent="ScrollContainer/CenterContainer/VBoxContainer"]
margin_top = 260.0
margin_right = 288.0
margin_bottom = 338.0

[node name="Next" type="Button" parent="ScrollContainer/CenterContainer/VBoxContainer/HFlowContainer"]
margin_right = 28.0
margin_bottom = 22.0
hint_tooltip = "next"
action_mode = 0
shortcut = SubResource( 18 )
icon = ExtResource( 2 )

[node name="Previous" type="Button" parent="ScrollContainer/CenterContainer/VBoxContainer/HFlowContainer"]
margin_left = 32.0
margin_right = 60.0
margin_bottom = 22.0
hint_tooltip = "next"
action_mode = 0
shortcut = SubResource( 17 )
icon = ExtResource( 5 )

[node name="Play" type="Button" parent="ScrollContainer/CenterContainer/VBoxContainer/HFlowContainer"]
margin_left = 64.0
margin_right = 92.0
margin_bottom = 22.0
toggle_mode = true
shortcut = SubResource( 22 )
icon = ExtResource( 7 )

[node name="HBoxContainer3" type="HBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer/HFlowContainer"]
margin_left = 96.0
margin_right = 215.0
margin_bottom = 22.0

[node name="FPSSlider" type="HSlider" parent="ScrollContainer/CenterContainer/VBoxContainer/HFlowContainer/HBoxContainer3"]
margin_right = 96.0
margin_bottom = 16.0
rect_min_size = Vector2( 96, 0 )
min_value = 4.0
max_value = 25.0
value = 12.0

[node name="Label" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer/HFlowContainer/HBoxContainer3"]
margin_left = 100.0
margin_top = 4.0
margin_right = 119.0
margin_bottom = 18.0
text = "fps"

[node name="VSeparator3" type="VSeparator" parent="ScrollContainer/CenterContainer/VBoxContainer/HFlowContainer"]
margin_left = 219.0
margin_right = 223.0
margin_bottom = 22.0

[node name="DrawArea" type="SpinBox" parent="ScrollContainer/CenterContainer/VBoxContainer/HFlowContainer"]
margin_top = 26.0
margin_right = 74.0
margin_bottom = 50.0
min_value = 2.0
max_value = 1.1664e+06
value = 512.0
suffix = "area"

[node name="VSeparator" type="VSeparator" parent="ScrollContainer/CenterContainer/VBoxContainer/HFlowContainer"]
margin_left = 78.0
margin_top = 26.0
margin_right = 82.0
margin_bottom = 50.0

[node name="LineEdit" type="LineEdit" parent="ScrollContainer/CenterContainer/VBoxContainer/HFlowContainer"]
margin_left = 86.0
margin_top = 26.0
margin_right = 181.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="VSeparator2" type="VSeparator" parent="ScrollContainer/CenterContainer/VBoxContainer/HFlowContainer"]
margin_left = 185.0
margin_top = 26.0
margin_right = 189.0
margin_bottom = 50.0

[node name="Redo" type="Button" parent="ScrollContainer/CenterContainer/VBoxContainer/HFlowContainer"]
margin_left = 193.0
margin_top = 26.0
margin_right = 221.0
margin_bottom = 50.0
icon = ExtResource( 10 )

[node name="Undo" type="Button" parent="ScrollContainer/CenterContainer/VBoxContainer/HFlowContainer"]
margin_left = 225.0
margin_top = 26.0
margin_right = 253.0
margin_bottom = 50.0
icon = ExtResource( 9 )

[node name="OK" type="Button" parent="ScrollContainer/CenterContainer/VBoxContainer/HFlowContainer"]
margin_left = 257.0
margin_top = 26.0
margin_right = 288.0
margin_bottom = 50.0
text = "OK"

[node name="Back" type="CheckBox" parent="ScrollContainer/CenterContainer/VBoxContainer/HFlowContainer"]
margin_top = 54.0
margin_right = 57.0
margin_bottom = 78.0
text = "back"

[connection signal="child_entered_tree" from="ScrollContainer/CenterContainer/VBoxContainer/HBoxContainer/TabContainer" to="." method="_on_TabContainer_child_entered_tree"]
[connection signal="tab_changed" from="ScrollContainer/CenterContainer/VBoxContainer/HBoxContainer/TabContainer" to="." method="_on_TabContainer_tab_changed"]
[connection signal="pressed" from="ScrollContainer/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/Add" to="." method="_on_Add_pressed"]
[connection signal="value_changed" from="ScrollContainer/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/VSlider" to="." method="_on_VSlider_value_changed"]
[connection signal="pressed" from="ScrollContainer/CenterContainer/VBoxContainer/HFlowContainer/Next" to="." method="_on_Next_pressed"]
[connection signal="value_changed" from="ScrollContainer/CenterContainer/VBoxContainer/HFlowContainer/DrawArea" to="." method="_on_DrawArea_value_changed"]
[connection signal="text_entered" from="ScrollContainer/CenterContainer/VBoxContainer/HFlowContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="ScrollContainer/CenterContainer/VBoxContainer/HFlowContainer/OK" to="." method="_on_OK_pressed"]
